Fix home tagline spacing on mobile (#302)

--- a/packages/lit-dev-content/site/css/home/1-splash.css
+++ b/packages/lit-dev-content/site/css/home/1-splash.css
@@ -30,6 +30,10 @@
   margin: 0 60px -9px 0;
 }
 
+#tagline > span {
+  display: block;
+}
+
 #splashButtons {
   display: flex;
   flex-direction: column;
@@ -90,8 +94,8 @@
     font-size: 20px;
   }
 
-  #tagline > br {
-    display: none;
+  #tagline > span {
+    display: inline;
   }
 
   #npmInstall {
